# test-backend

./:  .git_template  .babelrc  .dockerignore  .editorconfig  .env  .env.development  .env.example  .env.production  .env.sample  .env.template  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .example.env  .gitignore  .gitlab-ci.yml  .jscsrc  .jshintrc  .nycrc  .pnp.cjs  .prettierignore  .prettierrc  .prettierrc.json  .travis.yml  .vcmrc  .yo-rc.json  ARCHITECTURE.md  Cargo.toml  Dockerfile  Document.md  Driver.sketch  Gruntfile.js  INTRODUCTION  Instruction.md  License  Makefile  README.MD  (+80 more)
.ansible/: development  playbook.yml
.circleci/: config.yml
Tool/: dataBaseReset.js
api/: Dockerfile  api.js  package-lock.json  package.json  routes.js
apis/: userApi.js
app/: app.js  db.js  error.js  index.js  logger.js  middleware.js  router.js
assets/: swagger.json
backend/: Dockerfile  app.js  logger.js  manage.py  package-lock.json  package.json  readme.md  requirements.txt
backendTest/: manage.py
client/: extend.js  global-monitor.js  index.htm  load.js  settings.js
common/: error.js  errors.ts  index.js  types.js
config/: auth.js  blueprints.js  config.default.js  config.default.yaml  config.development.json  config.env  config.js  config.test.yaml  config.unittest.js  connections.js  csrf.js  custom-environment-variables.json  database.ts  db.js  dbservice.js  default.js  default.json  development.js  http.js  i18n.js  index.js  index.js.map  index.ts  nodemon.json  oauth2.js  plugin.js  policies.js  production.json  (+10 more)
(+1897 files in other folders)
