[package]
name = "backend-test"
version = "0.1.0"
authors = ["Matrix <113445886@qq.com>"]
edition = "2018"

[dependencies]
actix-files = "0.1"
actix-session = "0.2"
actix-web = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.14"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0.0-beta.13"
